# discord_movie_bot

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: db.rs  http.rs  main.rs  movie.rs  utils.rs
