[package]
name = "discord_movie_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql" ] }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0", features = ["raw_value"] }
serenity = { version = "0.11", features = ["collector"] }
regex = "1.9.1"
anyhow = "1.0.72"
futures = "0.3.28"
